--- a/style.css
+++ b/style.css
@@ -1,1 +1,6 @@
-img {display: block;margin-left: auto;margin-right: auto;width: 30%;}
+img { display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 50%;
+height: auto;
+}
